# XDR2

./: README.md
drivers/xdrfs_minifilter/: xdrfs.c  xdrfs.h  xdrfs.inf  xdrfs_publish.c  xdrfs_publish.h  xdrfs_utils.c  xdrfs_wire.c  xdrfs_wire.h
drivers/xdrk_core/: callbacks.c  ring_buffer.c  trace.h  utils.c  xdrk_core.c  xdrk_core.h  xdrk_core.inf
drivers/xdrwfp_callout/: xdrwfp.c  xdrwfp.h  xdrwfp.inf  xdrwfp_utils.c  xdrwfp_wire.c
rules/: process_injection.yaml  ransomware_indicators.yaml  suspicious_network.yaml
shared/: xdr_shared.h
sql/: schema.sql
userland/: Cargo.toml  build.rs
userland/c/: xdr_uapi.c
userland/src/: config.rs  crypto.rs  driver.rs  etw.rs  events.rs  lib.rs  live_response.rs  pipeline.rs  service.rs  storage.rs  types.rs  utils.rs
userland/src/rules/: correlation.rs  engine.rs  mod.rs  parser.rs  schema.rs
userland/tests/: rule_roundtrip.rs
